Wed Mar 20 16:24:49 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: workaround for autoconf 2.53.

Wed Mar 20 00:46:54 2002  Akinori MUSHA  <knu@iDaemons.org>

	* dir.c (my_getcwd): the content of buf is uncertain and must not
	  be printed when getcwd(buf, size) has failed.

Mon Mar 18 10:55:03 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* enum.c (enum_find): catch a value before recycle.

	* enum.c (enum_min): ditto.

	* enum.c (enum_max): ditto.

	* parse.y (parse_string): part of multi-byte sequence must not
	  match to paren.

	* parse.y (parse_qstring): ditto.

	* parse.y (parse_quotedwords): ditto.

	* parse.y (str_extend): handle multi-byte characters.

Sat Mar 16 15:30:40 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_search): should clear last_match if pos is out of
	  string range.

	* string.c (rb_str_index_m): ditto.

	* string.c (rb_str_rindex): ditto.

Thu Mar 14 16:42:37 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (rb_define_class): should handle autoload.

	* class.c (rb_define_module): ditto.

Thu Mar 14 00:29:12 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_match): should clear $~ if operand is nil.

	* re.c (rb_reg_match2): ditto.

Wed Mar 13 18:50:29 2002  Akinori MUSHA  <knu@iDaemons.org>

	* lib/getopts.rb: Merge from 1.7.  Rewrite to fix some bugs and
	  complete features.
	    - Accept options with the colon in the first argument;
	      getopts("a:bcd:") is equivalent to getopts("bc", "a:", "d:").
	    - Do not discard the argument that caused an error.
	    - Do not discard '-', which commonly stands for stdin or stdout.
	    - Allow specifying a long option with a value using '='.
	      (command --long-option=value)
	    - Stop reading options when it meets a non-option argument.

Mon Mar 11 18:03:37 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_compile_pattern): '\0111' should be '\011' plus '1',