@@ -1760,7 +1760,6 @@ is_defined(self, node, buf)
 	goto check_bound;
 
       case NODE_CALL:
-	if (!is_defined(self, node->nd_recv, buf)) return 0;
 	PUSH_TAG(PROT_NONE);
 	if ((state = EXEC_TAG()) == 0) {
 	    val = rb_eval(self, node->nd_recv);
@@ -1895,6 +1894,10 @@ is_defined(self, node, buf)
 	    return buf;
 	}
 	break;
+
+      case NODE_NEWLINE:
+	node = node->nd_next;
+	goto again;
 
       default:
 	PUSH_TAG(PROT_NONE);
